# Seminar-Project

./: CMakeLists.txt  Makefile  README.md  cleanup_comments.py  member1_opal_core_report.docx  opal_freertos.elf  opal_freertos.hex
app/: opal_app_freertos.c
cmake/: arm-none-eabi.cmake
core/: opal_core.c  opal_core.h  opal_tokens.h  opal_uids.h
ral/: CMakeLists.txt  FreeRTOSConfig.h  opal_app_freertos.c  opal_ral.h  opal_ral_freertos.c  opal_ral_posix.c
tests/: test_opal_core  test_opal_core.c
transport/: opal_transport.h  opal_transport_hw.c  opal_transport_hw.h  opal_transport_mock.c  opal_transport_mock.h
